--- a/auth_example.yml
+++ b/auth_example.yml
@@ -2,6 +2,7 @@ twitch:
   gql:
     client_id: "ue6666qo983tsx6so1t0vnawi233wa"
     token: ""
+    owner_token: "" # optional, for loading blocklist
     user_id: ""
 cloudflare:
   key: ""
